# ml-video-denoiser

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
cli/: main.cc
cmake/: FindCUDNN.cmake
docs/: architecture.md  build.md  mc_noise_workflow.md  weight_format.md
include/denoiser/: tensor.h  weight_loader.h
include/denoiser/io/: exr_io.h  image_io.h  video_io.h
include/denoiser/kernels/: model_kernels.h  nafnet_kernels.h
include/denoiser/layers/: batchnorm2d.h  conv2d.h  deform_conv2d.h  maxpool2d.h  relu.h  upsample.h
include/denoiser/models/: nafnet.h  nafnet_temporal.h  nef_residual.h  nef_temporal.h
nuke/: MCNoise.blink  MCNoise.nk  export_mc_noise_presets.py  mc_noise_presets.nk  mc_noise_presets_default.json  mc_noise_presets_tgb.json  mc_noise_presets_tgb_lit_15.json  mc_noise_presets_tgb_lit_patch15_balanced.json  mc_noise_presets_tgb_lit_patch15_faceboost.json  mc_noise_presets_tgb_lit_patch18_shadowface.json  mc_noise_presets_tgb_lit_patch18_shadowface_reweighted.json  mc_noise_presets_tgb_mid_lit_rfix.json  mc_noise_presets_tgb_mid_lit_rfix_strong.json  mc_noise_presets_tgb_mid_proof.json  mc_noise_presets_tgb_safe.json  mc_noise_presets_tgb_safe_nofirefly.json
scripts/: compare_models.sh  generate_mc_noise_pairs.sh  generate_mc_noise_pairs_pod.sh  infer.sh  infer_cascade_exp048_stage2.sh  infer_cascade_exp048_stage2_256patches_v1.sh  infer_spatial_exp048.sh  infer_temporal_exp048_stage2.sh  infer_temporal_exp048_stage2_warp.sh  infer_temporal_exp048_stage3.sh  infer_temporal_exp048_stage3_warp.sh  infer_test_cs_spatial.sh  tensorboard.sh  test_colorspace.sh  train.sh  train2.sh  train_and_compare.sh  train_cascade.sh  train_cascade_mc_noise_dataset_tgb_lit_15_pod.sh  train_cascade_mc_noise_dataset_tgb_lit_patch18_shadowface_pod.sh  train_cascade_mc_noise_dataset_tgb_lit_patch18_shadowface_reweighted_pod.sh  train_cascade_mc_noise_dataset_tgb_mid_lit_rfix_pod.sh  train_cascade_mc_noise_dataset_tgb_mid_lit_rfix_strong_pod.sh  train_cascade_mc_noise_dataset_tgb_mid_proof_pod.sh  train_cascade_mc_noise_dataset_tgb_pod.sh  train_cascade_mc_noise_dataset_tgb_safe_nofirefly_pod.sh  train_cascade_mc_noise_dataset_tgb_safe_pod.sh  train_cascade_paired_lit2seq_to_compare.sh  train_cascade_paired_synth_shadowface.sh  train_cascade_paired_synth_shadowface_pod.sh  train_cascade_temporal.sh  train_stage4.sh  train_synthetic.sh  train_synthetic_noise_patches.sh  train_temporal_exp048_stages.sh  train_temporal_exp048_temporal_stages_only.sh  train_temporal_exp048_temporal_stages_only_warp.sh
src/: tensor.cu  weight_loader.cc
src/io/: exr_io.cc  image_io.cc  video_io.cc
src/kernels/: bn_inference.cuh  concat.cuh  deform_im2col.cuh  fp16_utils.cuh  model_kernels.cu  nafnet_kernels.cu
src/layers/: batchnorm2d.cu  conv2d.cu  deform_conv2d.cu  maxpool2d.cu  relu.cu  upsample.cu
src/models/: nafnet.cu  nafnet_temporal.cu  nef_residual.cu  nef_temporal.cu
tests/: CMakeLists.txt  conftest.py  gen_fixtures.py  gen_sample_images.py  noise_preview.py  test_batchnorm2d.cc  test_conv2d.cc  test_integration.py  test_tensor.cc  test_unet_forward.cc  test_weight_loader.cc  visualise_noise.py
training/: cascade_model.py  compare_models.py  dataset.py  export.py  generate_mc_noise_pairs.py  infer.py  losses.py  models.py  noise_calibrate.py  noise_generators.py  noise_profiler.py  preview_mc_noise.py  preview_noise.py  pyproject.toml  refiner_model.py  training.py  video_extract.py
training/tests/: conftest.py  test_dataset.py  test_export.py  test_infer.py  test_models.py  test_noise_generators.py  test_noise_profiler.py  test_noise_visual.py  test_training_checkpoint.py  test_training_cli.py  test_training_smoke.py
