[project]
name = "denoiser-training"
version = "0.1.0"
description = "ML video denoiser — training pipeline"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "rawpy",
    "imageio",
    "Pillow",
    "OpenEXR",
    "ffmpeg-python",
    "numpy",
    "tqdm",
    "tensorboard",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "pylint",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "google"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = ["C0114", "R0903"]
